--- a/UVIndexNordic/UVIndexNordic/Info.plist
+++ b/UVIndexNordic/UVIndexNordic/Info.plist
@@ -8,6 +8,10 @@
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.perjansson.ios.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<key>NSLocationWhenInUsageDescription</key>
+	<string>To find out which UV index forecast is closest the you</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>To find out which UV index forecast is closest the you</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
