--- a/UVIndexNordic/UVIndexNordic/Info.plist
+++ b/UVIndexNordic/UVIndexNordic/Info.plist
@@ -23,9 +23,9 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>To find out which UV index forecast is closest the you</string>
+	<string>To find UV index at your location</string>
 	<key>NSLocationWhenInUsageDescription</key>
-	<string>To find out which UV index forecast is closest the you</string>
+	<string>To find UV index at your location</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
